<resources>
    <string name="app_name">Reecicla App</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="facebook_app_id">1234</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>


    <string name="accept">Aceptar</string>
    <string name="map">Mapa de reciclaje</string>
    <string name="recmap">Recoleccion</string>
    <string name="filter">Filtros</string>
    <string name="place_name">Nombre del lugar</string>
    <string name="place_clasification">Clasificación del lugar</string>
    <string name="place_direction">Dirección del lugar</string>
    <string name="place_hours">Horario del lugar</string>
    <string name="contact">Contactar</string>
    <string name="add_favorites">Agregar a favoritos</string>
    <string name="more">Mas</string>
    <string name="mark_image">imagen marcador</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="self_ubication">Mi ubicación</string>
    <string name="iniciada">Iniciada</string>
    <string name="enProceso">En Proceso</string>
    <string name="completada">Completada</string>
    <string name="cancelada">Cancelada</string>
    <string name="background_image">Background Image</string>
    <string name="reciclaje">Reciclaje</string>
    <string name="fecha">07/11/2023</string>
    <string name="imagen_calendario">imagen de un calendario</string>
    <string name="imagen_reloj">imagen de un reloj</string>
    <string name="conteo_materiales">3 Materiales</string>
    <string name="orden_de_reciclaje">Orden de Reciclaje</string>
    <string name="hora">07:33</string>
    <string name="bot_n_para_a_adir_orden">Botón para añadir orden</string>
    <string name="nueva_recolecci_n">Nueva recolección</string>
    <string name="continuar">Continuar</string>
    <string name="_6_oct_2023">6 Oct 2023</string>
    <string name="seleccionar_horario">Seleccionar Horario</string>
    <string name="imagen_de_horario">Imagen de horario</string>
    <string name="_13_00">13:00</string>
    <string name="_17_00">17:00</string>
    <string name="desde">Desde</string>
    <string name="hasta">hasta</string>
    <string name="comentarios_para_el_recolector">Comentarios para el Recolector</string>
    <string name="en_persona">En persona</string>
    <string name="en_puerta">En puerta</string>
    <string name="forma_de_entrega">Forma de Entrega</string>
    <string name="ingresar_direcci_n">Ingresar Dirección</string>
    <string name="c_digo_postal">Código Postal</string>
    <string name="calle">Calle</string>
    <string name="n_mero_exterior_interior">Número Exterior/Interior</string>
    <string name="ingresar_calle">Ingresar Calle</string>
    <string name="_21">21</string>
    <string name="ni_os_h_roes">Niños Héroes</string>
    <string name="colonia">Colonia</string>
    <string name="atexcac">Atexcac</string>
    <string name="municipio">Municipio</string>
    <string name="_72020">72020</string>
    <string name="san_andr_s_cholula">San Andrés Cholula</string>
    <string name="ejemplo_telefono">55 12345678</string>
    <string name="tel_fono">Teléfono</string>
    <string name="indicaciones_al_recolector">Indicaciones al Recolector</string>
    <string name="comentarios">comentarios</string>
    <string name="localizarme_en_el_mapa">Localizarme en el Mapa</string>
    <string name="_12_00_hrs">12:00 hrs</string>
    <string name="vie_14_de_aug_de_2023">vie. 14 de Aug de 2023</string>
    <string name="imagen_de_reciclaje">Imagen de Reciclaje</string>
    <string name="elegir_materiales">Elegir Materiales</string>
    <string name="agregar_material">Agregar Material</string>
    <string name="bot_n_de_x_para_salir_de_la_pantalla_actual">Botón de X para salir de la pantalla actual</string>
    <string name="madera">Madera</string>
    <string name="imagen_de_material">Imagen de Material</string>
    <string name="materiales_a_reciclar">Materiales a Reciclar</string>
    <string name="_10">10</string>
    <string name="bot_n_para_restar_unidades">Botón para restar unidades</string>
    <string name="bot_n_para_a_adir_unidades">Botón para añadir unidades</string>
    <string name="cantidad">Cantidad:</string>
    <string name="eliminar">Eliminar</string>
    <string name="tomar_foto">Tomar Foto</string>
    <string name="ver_foto">Ver Foto</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="deseas_confirmar_la_orden">¿Deseas confirmar la orden?</string>
    <string name="confirmar_orden">Confirmar Orden</string>
    <string name="confirmar">Confirmar</string>
    <string name="cancelar">Cancelar</string>
    <string name="msj_confirmacion_orden">Tu orden está siendo procesada.\n\nEl estado de la recolección cambiará cuando encontremos un recolector.</string>
    <string name="lo_sentimos_a_n_no_se_ha_encontrado_un_recolector_le_notificaremos_tan_r_pido_como_encontremos_uno">Lo sentimos, aún no se ha encontrado un Recolector, el estado de la recolección cambiará tan rápido como encontremos uno.</string>
    <string name="recolector">Recolector:</string>
    <string name="juan_ramirez_ramirez">Juan Ramirez Ramirez</string>
    <string name="permanezca_cerca_del_celular_por_cualquier_notificaci_n">Permanezca cerca del celular y la aplicación por cualquier cambio.</string>
    <string name="msj_recoleccion_iniciada">Lo sentimos, aún no se ha encontrado un Recolector, el estado de la recolección cambiará tan rápido como encontremos uno.</string>
    <string name="cancelar_orden">Cancelar Orden</string>
    <string name="deseas_cancelar_la_orden">¿Deseas Cancelar la Orden?</string>
    <string name="ver_centros">Ver Centros</string>
    <string name="lamentablemente_no_encontramos_un_recolector_o_se_cancel_su_orden_puede_intentar_otro_horario_o_visitar_un_centro_de_acopio_cercano">Lamentablemente, no encontramos un recolector o se canceló su orden. Puede intentar otro horario o visitar un centro de acopio cercano.</string>
    <string name="felicidades_su_orden_ha_sido_completada_gracias_por_ayudar_a_cuidar_el_medio_ambiente">“Felicidades! Su orden ha sido completada, gracias por ayudar a cuidar el medio ambiente.</string>
    <string name="tel_fono_del_recolector">Teléfono del Recolector:</string>
    <string name="foto_de_material">Foto de Material</string>
    <string name="foto_seleccionada_por_el_usuario_para_el_material_seleccionado">Foto seleccionada por el usuario para el material seleccionado</string>
    <string name="ver_galer_a">Ver Galería</string>
    <string name="calificaci_n_del_recolector">Calificación del Recolector</string>
    <string name="_5_0">5.0</string>
    <string name="imagen_de_una_estrella">Imagen de una Estrella</string>
    <string name="ver_detalles">Ver Detalles</string>
    <string name="entrega_en_persona">Entrega en Persona</string>
    <string name="imagen_de_usuario_o_puerta">Imagen de usuario o puerta</string>
    <string name="materiales_escogidos">Materiales Escogidos:</string>
    <string name="cantidad_5">Cantidad: 5</string>
    <string name="unidad_bolsas">Unidad: Bolsas</string>
    <string name="aceite_de_auto">Aceite de Auto</string>
    <string name="califica_a_tu_recolector">Califica a tu Recolector</string>
    <string name="aceptar">Aceptar</string>
    <string name="ubicaci_n">Ubicación</string>
    <string name="como_usar_el_mapa">Como usar el Mapa</string>
    <string name="explicacion_como_precisar_ubicacion">A continuación, verás un mapa con un marcador en tu ubicación GPS. Si deseas cambiar tu ubicación, solo mantén presionado un segundo el marcador y ajústalo a donde prefieras. Luego, pulsa  \'Aceptar \' para confirmar tu elección de ubicación. ¡Gracias por usar nuestro servicio!</string>
    <string name="imagen_de_ejemplo_del_mapa">imagen de ejemplo del mapa</string>
    <string name="comprendo">Comprendo</string>
    <string name="mi_ubicaci_n">Mi ubicación</string>
    <string name="imagen_de_noticia">Imagen de noticia</string>
    <string name="t_tulo_noticia">Título Noticia</string>
    <string name="msn_noticias">MSN Noticias</string>
    <string name="paneles_solares_cu_les_son_los_beneficios_que_tienen_para_el_medio_ambiente">Paneles solares: ¿cuáles son los beneficios que tienen para el medio ambiente?</string>
    <string name="seg_n_un_art_culo_de_msn_noticias1_los_paneles_solares_se_han_destacado_como_una_soluci_n_clave_para_mitigar_los_impactos_del_cambio_clim_tico_y_la_transici_n_hacia_fuentes_de_energ_a_m_s_sostenibles_el_art_culo_destaca_que_los_paneles_solares_no_emiten_gases_de_efecto_invernadero_lo_que_los_hace_una_fuente_de_energ_a_limpia_y_renovable_adem_s_los_paneles_solares_pueden_reducir_la_dependencia_de_los_combustibles_f_siles_y_disminuir_la_huella_de_carbono">Según un artículo de MSN Noticias1, los paneles solares se han destacado como una solución clave para mitigar los impactos del cambio climático y la transición hacia fuentes de energía más sostenibles. El artículo destaca que los paneles solares no emiten gases de efecto invernadero, lo que los hace una fuente de energía limpia y renovable. Además, los paneles solares pueden reducir la dependencia de los combustibles fósiles y disminuir la huella de carbono.</string>
    <string name="regresar">Regresar</string>
    <string name="inicio">Inicio</string>
    <string name="hola_ra_l">Hola Raúl</string>
    <string name="noticia">Noticia</string>
    <string name="imagen_noticia">Imagen Noticia</string>
    <string name="t_tulo">Título</string>
    <string name="foto_de_perfil">Foto de Perfil</string>
    <string name="bot_n_para_tomar_foto">Botón para tomar foto</string>
    <string name="indicaci_n_1">Indicación 1</string>
    <string name="indicaci_n_2">Indicación 2</string>
</resources>